# django-places

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pages.yml
djplaces/: __init__.py  fields.py  widgets.py
djplaces/static/css/: djplaces.css
djplaces/static/js/: djplaces.js
djplaces/templates/djplaces/: map_widget.html
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/source/: conf.py
docs/source/_static/css/: custom.css
example/: README.md  db.sqlite3
example/example/: settings.py  urls.py
example/points/: admin.py  models.py  views.py
example/points/migrations/: 0001_initial.py  0002_route_routepoint.py
example/templates/djplaces/: base.html
example/templates/points/: place_form.html  place_update_form.html
places/: __init__.py  apps.py  conf.py  fields.py  forms.py  serializers.py  widgets.py
places/static/places/: places.css  places.js
places/templates/places/widgets/: places.html
tests/: test_models.py  test_serializers.py
